# chas-elite-prep-mcp

./: .cursorrules  README.md  glama.json  pyproject.toml  server.json  server.py
.well-known/mcp/: server-card.json
