[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chas-elite-prep-mcp"
version = "1.0.0"
description = "CHAS / SafeContractor / Constructionline pre-qualification preparation. Health & safety, environmental, equality, financial assessment."
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [{name = "MEOK AI Labs", email = "hello@meok.ai"}]
keywords = ["chas", "safecontractor", "constructionline", "prequalification", "sssip", "mcp"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries",
]
dependencies = ["mcp>=1.0.0"]

[project.urls]
Homepage = "https://meok.ai"
Repository = "https://github.com/meok-ai-labs/chas-elite-prep-mcp"

[tool.hatch.build.targets.wheel]
packages = ["."]
only-include = ["server.py"]

[project.scripts]
chas-elite-prep-mcp = "server:main"
